# CUDA-Scheduler

./: CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  build.sh  requirements.txt
benchmarks/: CMakeLists.txt
examples/: CMakeLists.txt  advanced_features.cpp  basic_usage.cpp
include/cuda_scheduler/: ai_predictor.hpp  multi_gpu_scheduler.hpp  onnx_model.hpp  performance_monitor.hpp  preemption.hpp  priority_queue.hpp  scheduler.hpp  telemetry.hpp
ml/: train_model.py
src/: CMakeLists.txt  ai_predictor.cpp  multi_gpu_scheduler.cpp  onnx_model.cpp  performance_monitor.cpp  preemption_manager.cpp  priority_queue.cpp  scheduler.cpp  telemetry.cpp  utils.cpp
tests/: CMakeLists.txt  test_ai_predictor.cpp  test_multi_gpu_scheduler.cpp  test_preemption_manager.cpp  test_scheduler.cpp
